Fixed bugs in login process

--- a/BtkFinalProject.Web/Properties/launchSettings.json
+++ b/BtkFinalProject.Web/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "BtkFinalProject.Web": {
+    "Infotech.Web": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
